implemented face recognition for some facial expressions

--- a/FaceToEmoji/Info.plist
+++ b/FaceToEmoji/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera needed to view facial expression</string>
 </dict>
 </plist>
